login signup changes

--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -58,7 +58,7 @@
 
     <!-- main content on the right -->
     <div class="col-10 main">
-        <app-header [loggingIn]="true"></app-header>
+        <!-- <app-header [loggingIn]="true"></app-header> -->
         <div>
             <router-outlet></router-outlet>
         </div>
