--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -34,7 +34,7 @@
             </li>
             <li class="nav-item" 
                 *ngIf="!jwtService.getToken()">
-              <a class="nav-link waves-light"  [routerLink]="['/login']" mdbWavesEffect>
+              <a class="nav-link waves-light"  [routerLink]="['/login/tourist']" mdbWavesEffect>
                   <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                   LogIn</a>
           </li>
