--- a/src/app/shared/components/login-page/login-page.component.scss
+++ b/src/app/shared/components/login-page/login-page.component.scss
@@ -1,3 +1,4 @@
+// yahi tkk h
 .center-class {
     justify-content: center;
     text-align: center;
@@ -154,7 +155,9 @@ button {
         transition: background-color 1s ease-out;
     }
 }
-
+.button:hover{
+  color: #553d67;
+}
 .button {
     // margin-top: 3%;
     background: $white;
