--- a/src/app/shared/components/login-page/login-page.component.scss
+++ b/src/app/shared/components/login-page/login-page.component.scss
@@ -126,15 +126,15 @@ span {
     width: auto;
     height: 170px;
     top: 38%;
-    left: 25%;
-    // opacity: .7;
+    left: 23%;
+    opacity: .9;
 }
 
 .smaller {
-    width: 90px;
-    height: 100px;
-    top: 48%;
-    left: 38%;
+    width: auto;
+    height: 170px;
+    top: 38%;
+    left: 30%;
     opacity: .9;
 }
 
