--- a/src/app/shared/components/guide-profile/guide-profile.component.html
+++ b/src/app/shared/components/guide-profile/guide-profile.component.html
@@ -94,13 +94,13 @@
                     <!--Title-->
                     <h3 class="card-title">Hi, I can personalize your experience!</h3>
                     <!--Text-->
-                    <h6>Just let me know your preferences for a private and personalized experience!
+                    <h6>Just let me know your preferences for a private and personalized trip!
                     </h6>
                     <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                     <!-- <button type="button" class="btn  pink darken-3 btn-md" data-toggle="modal" data-target="#modalLoginAvatar">Request a personalized Tour</button> -->
-                    
+
                     <div class="text-center">
-                        <a class="btn pink darken-3 btn-rounded " (click)="openModal(personalTour)" >Request a personalized Tour</a>
+                        <a class="btn pink darken-3 btn-rounded " (click)="openModal(personalTour)">Request a personalized Tour</a>
                     </div>
 
                 </div>
@@ -153,102 +153,78 @@
         <!--Content-->
         <div class="modal-content">
             <form [formGroup]="personalBooking" (ngSubmit)="submitPersonalBooking()">
-            <!--Header-->
-            <div class="modal-header">
-                <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
-            </div>
-            <!--Body-->
-            <div class="modal-body text-center mb-1">
+                <!--Header-->
+                <div class="modal-header">
+                    <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
+                </div>
+                <!--Body-->
+                <div class="modal-body text-center mb-1">
 
-                <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
-                <hr mx-3>
-                <h5 class="text-left black-text">Tell me your preferred Date</h5>
-                <div class="row form-inline">
-                    
-                    <div class=" col-md-12 form-group hidden">
-                        <div class="input-group">
-                          <input name="datepicker"
-                                 class="form-control"
-                                 ngbDatepicker
-                                 #datepicker="ngbDatepicker"
-                                 [autoClose]="'outside'"
-                                 (dateSelect)="onDateSelection($event)"
-                                 [displayMonths]="2"
-                                 [dayTemplate]="t"
-                                 outsideDays="hidden"
-                                 [startDate]="fromDate!">
-                          <ng-template #t let-date let-focused="focused">
-                            <span class="custom-day"
-                                  [class.focused]="focused"
-                                  [class.range]="isRange(date)"
-                                  [class.faded]="isHovered(date) || isInside(date)"
-                                  (mouseenter)="hoveredDate = date"
-                                  (mouseleave)="hoveredDate = null">
+                    <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
+                    <hr mx-3>
+                    <h5 class="text-left black-text">Tell me your preferred Date</h5>
+                    <div class="row form-inline">
+
+                        <div class=" col-md-12 form-group hidden">
+                            <div class="input-group">
+                                <input name="datepicker" class="form-control" ngbDatepicker #datepicker="ngbDatepicker" [autoClose]="'outside'" (dateSelect)="onDateSelection($event)" [displayMonths]="2" [dayTemplate]="t" outsideDays="hidden" [startDate]="fromDate!">
+                                <ng-template #t let-date let-focused="focused">
+                                    <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)" [class.faded]="isHovered(date) || isInside(date)" (mouseenter)="hoveredDate = date" (mouseleave)="hoveredDate = null">
                               {{ date.day }}
                             </span>
-                          </ng-template>
+                                </ng-template>
+                            </div>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="input-group">
-                          <input #dpFromDate
-                                 class="form-control" placeholder="yyyy-mm-dd"
-                                 name="dpFromDate"
-                                 formControlName="startDate"
-                                 [value]="formatter.format(fromDate)"
-                                 (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
-                          <div class="input-group-append">
-                            <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="form-group ml-2">
-                        <div class="input-group">
-                          <input #dpToDate
-                                 class="form-control" placeholder="yyyy-mm-dd"
-                                 name="dpToDate"
-                                 formControlName="endDate"
-                                 [value]="formatter.format(toDate)"
-                                 (input)="toDate = validateInput(toDate, dpToDate.value)">
-                          <div class="input-group-append">
-                            <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
-                          </div>
-                        </div>
-                      </div>
-
-                </div>
-                <!--  -->
-                <div class="font-small text-left mt-0">You can opt for a single day tour as well as multiple days' tours.</div>
-                <h5 class="text-left black-text mt-2">So how many Travellers are you?</h5>
-                <div class="row">
-                    <div class="col">
                         <div class="form-group">
-                            <select formControlName="groupType" class="form-control">
-                                <option value="" disabled>Select</option>
+                            <div class="input-group">
+                                <input #dpFromDate class="form-control" placeholder="yyyy-mm-dd" name="dpFromDate" formControlName="startDate" [value]="formatter.format(fromDate)" (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input #dpToDate class="form-control" placeholder="yyyy-mm-dd" name="dpToDate" formControlName="endDate" [value]="formatter.format(toDate)" (input)="toDate = validateInput(toDate, dpToDate.value)">
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!--  -->
+                    <div class="font-small text-left mt-0">You can opt for a single day tour as well as multiple days' tours.</div>
+                    <h5 class="text-left black-text mt-2">So how many Travellers are you?</h5>
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-group">
+                                <select formControlName="groupType" class="form-control">
+                                <option value="" disabled>Select Group type</option>
                                 <option *ngFor="let item of groupTypesList" [value]="item">{{item}}</option>
                             </select>
+                            </div>
+
+                            <!-- <input type="number" mdbInput class="form-control" placeholder="Adults"> -->
                         </div>
-
-                        <!-- <input type="number" mdbInput class="form-control" placeholder="Adults"> -->
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                        <input type="number" formControlName="noOfPeople" class="form-control" placeholder="no of people">
+                        <div class="col">
+                            <div class="form-group">
+                                <input type="number" formControlName="noOfPeople" class="form-control" placeholder="no of people">
+                            </div>
                         </div>
                     </div>
-                </div>
 
 
-                <!-- <div class="md-form ml-0 mr-0">
+                    <!-- <div class="md-form ml-0 mr-0">
                     <input type="password" type="text" id="form29" class="form-control form-control-sm validate ml-0">
                     <label data-error="wrong" data-success="right" for="form29" class="ml-0">Enter password</label>
                 </div> -->
 
-                <div class="text-center mt-4">
-                    <button type="submit" class="btn btn-cyan mt-1">Request a personalized Tour</button>
+                    <div class="text-center mt-4">
+                        <button type="submit" class="btn btn-cyan mt-1">Request a personalized Tour</button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
 
         </div>
         <!--/.Content-->
