--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -1,8 +1,8 @@
 <!-- side navbar -->
 <div class="row" style="overflow: hidden;">
 
-    <div class="col-2">
-        <div class="navside all-style">
+    <div class="col-2 pr-0">
+        <div class="navside py-3">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="img-fluid z-depth-1 rounded-circle mt-3" alt="Responsive image">
@@ -57,7 +57,7 @@
 
 
     <!-- main content on the right -->
-    <div class="col-10 main">
+    <div class="col-10 main pl-0">
         <!-- <app-header [loggingIn]="true"></app-header> -->
         <div>
             <router-outlet></router-outlet>
