--- a/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
+++ b/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
@@ -50,7 +50,7 @@
     </div>
     <div class="row card-body">
         <div class="col-md-3">
-            <h4 style="color: rgb(255, 153, 0) ">Intrests</h4>
+            <h4 style="color: rgb(255, 153, 0) ">Interests</h4>
         </div>
         <div class="col-md-9">
             <div class="row" *ngFor="let item of userData.interests" style="border-bottom: 1px solid gray;">
