--- a/src/app/shared/components/guide-profile/guide-profile.component.html
+++ b/src/app/shared/components/guide-profile/guide-profile.component.html
@@ -31,7 +31,7 @@
                     </div>
 
                 </div>
-                <hr class="myt-4 ml-3 mr-3 mb-0">
+                <hr class="myt-4 mx-3 mb-0">
                 <!-- cascade="true" -->
 
                 <mdb-card-body>
