--- a/src/app/modules/home/top-cities/top-cities.component.html
+++ b/src/app/modules/home/top-cities/top-cities.component.html
@@ -26,9 +26,9 @@
   </ng-template>
 </owl-carousel-o> -->
 
-<div class="row">
+<div class="row mx-5 my-4">
     <div class=" col-md-3">
-        <div class="trending px-2 my-3">
+        <div class="trending px-2">
             <div>TRENDING</div>
             <div>DESTINATIONS</div>
         </div>
