--- a/src/app/modules/tourists/pages/all-bookings/all-bookings.component.scss
+++ b/src/app/modules/tourists/pages/all-bookings/all-bookings.component.scss
@@ -1,42 +1,49 @@
-.booking a{
+.booking a {
     color: rgba(233, 30, 99, 0.7);
 }
-.booking a:hover{
-  text-shadow: 0px 0px 6px rgba(233, 30, 99, 0.7);
 
+.booking a:hover {
+    text-shadow: 0px 0px 6px rgba(233, 30, 99, 0.7);
 }
-.request a{
+
+.request a {
     color: rgba(0, 188, 212, 0.7);
 }
-.request a:hover{
-  text-shadow: 0px 0px 6px rgba(0, 188, 212, 0.7);
 
-}
-.history a{
-    color: rgba(255, 152, 0, 0.7) ;
-}
-.history a:hover{
-  text-shadow: 0px 0px 6px rgba(255, 152, 0, 0.7);
-
-}
-.side-text mdb-icon{
-color: rgb(135, 196, 135);
-}
-.side-text{
-   background-image: linear-gradient(56deg, rgba(254, 254, 254, 0.05) 0%, rgba(254, 254, 254, 0.05) 69%,rgba(160, 160, 160, 0.05) 69%, rgba(160, 160, 160, 0.05) 100%),linear-gradient(194deg, rgba(102, 102, 102, 0.02) 0%, rgba(102, 102, 102, 0.02) 60%,rgba(67, 67, 67, 0.02) 60%, rgba(67, 67, 67, 0.02) 100%),linear-gradient(76deg, rgba(169, 169, 169, 0.06) 0%, rgba(169, 169, 169, 0.06) 89%,rgba(189, 189, 189, 0.06) 89%, rgba(189, 189, 189, 0.06) 100%),linear-gradient(326deg, rgba(213, 213, 213, 0.04) 0%, rgba(213, 213, 213, 0.04) 45%,rgba(66, 66, 66, 0.04) 45%, rgba(66, 66, 66, 0.04) 100%),linear-gradient(183deg, rgba(223, 223, 223, 0.01) 0%, rgba(223, 223, 223, 0.01) 82%,rgba(28, 28, 28, 0.01) 82%, rgba(28, 28, 28, 0.01) 100%),linear-gradient(3deg, rgba(20, 20, 20, 0.06) 0%, rgba(20, 20, 20, 0.06) 62%,rgba(136, 136, 136, 0.06) 62%, rgba(136, 136, 136, 0.06) 100%),linear-gradient(200deg, rgba(206, 206, 206, 0.09) 0%, rgba(206, 206, 206, 0.09) 58%,rgba(6, 6, 6, 0.09) 58%, rgba(6, 6, 6, 0.09) 100%),linear-gradient(304deg, rgba(162, 162, 162, 0.07) 0%, rgba(162, 162, 162, 0.07) 27%,rgba(24, 24, 24, 0.07) 27%, rgba(24, 24, 24, 0.07) 100%),linear-gradient(186deg, rgba(166, 166, 166, 0.04) 0%, rgba(166, 166, 166, 0.04) 5%,rgba(210, 210, 210, 0.04) 5%, rgba(210, 210, 210, 0.04) 100%),linear-gradient(90deg, rgb(26, 118, 64),rgb(32, 207, 121),rgb(78, 196, 128));
-  color: white;
-  font-weight: bolder;
-  // position: -webkit-sticky; /* Safari */
-  position: fixed !important;
-  height: 218px;
-  // float: right !important;
-  margin-left: 885px;
-}
-.side-text h5{
-  font-weight: bolder;
-  color:  rgb(255, 255, 255) ;
-  font-size: 20px;
-  text-shadow: 0px 0px 11px white;
-
+.request a:hover {
+    text-shadow: 0px 0px 6px rgba(0, 188, 212, 0.7);
 }
 
+.history a {
+    color: rgba(255, 152, 0, 0.7);
+}
+
+.history a:hover {
+    text-shadow: 0px 0px 6px rgba(255, 152, 0, 0.7);
+}
+
+.side-text mdb-icon {
+    color: rgb(135, 196, 135);
+}
+
+.side-text {
+    background-image: linear-gradient(56deg, rgba(254, 254, 254, 0.05) 0%, rgba(254, 254, 254, 0.05) 69%, rgba(160, 160, 160, 0.05) 69%, rgba(160, 160, 160, 0.05) 100%), linear-gradient(194deg, rgba(102, 102, 102, 0.02) 0%, rgba(102, 102, 102, 0.02) 60%, rgba(67, 67, 67, 0.02) 60%, rgba(67, 67, 67, 0.02) 100%), linear-gradient(76deg, rgba(169, 169, 169, 0.06) 0%, rgba(169, 169, 169, 0.06) 89%, rgba(189, 189, 189, 0.06) 89%, rgba(189, 189, 189, 0.06) 100%), linear-gradient(326deg, rgba(213, 213, 213, 0.04) 0%, rgba(213, 213, 213, 0.04) 45%, rgba(66, 66, 66, 0.04) 45%, rgba(66, 66, 66, 0.04) 100%), linear-gradient(183deg, rgba(223, 223, 223, 0.01) 0%, rgba(223, 223, 223, 0.01) 82%, rgba(28, 28, 28, 0.01) 82%, rgba(28, 28, 28, 0.01) 100%), linear-gradient(3deg, rgba(20, 20, 20, 0.06) 0%, rgba(20, 20, 20, 0.06) 62%, rgba(136, 136, 136, 0.06) 62%, rgba(136, 136, 136, 0.06) 100%), linear-gradient(200deg, rgba(206, 206, 206, 0.09) 0%, rgba(206, 206, 206, 0.09) 58%, rgba(6, 6, 6, 0.09) 58%, rgba(6, 6, 6, 0.09) 100%), linear-gradient(304deg, rgba(162, 162, 162, 0.07) 0%, rgba(162, 162, 162, 0.07) 27%, rgba(24, 24, 24, 0.07) 27%, rgba(24, 24, 24, 0.07) 100%), linear-gradient(186deg, rgba(166, 166, 166, 0.04) 0%, rgba(166, 166, 166, 0.04) 5%, rgba(210, 210, 210, 0.04) 5%, rgba(210, 210, 210, 0.04) 100%), linear-gradient(90deg, rgb(26, 118, 64), rgb(32, 207, 121), rgb(78, 196, 128));
+    color: white;
+    font-weight: bolder;
+    // position: -webkit-sticky; /* Safari */
+    // position: fixed !important;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 25px;
+    height: 218px;
+    width: 225px;
+    // float: right !important;
+    // margin-left: 885px;
+}
+
+.side-text h5 {
+    font-weight: bolder;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    text-shadow: 0px 0px 11px white;
+}
