--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import '~ngx-toastr/toastr';
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
@@ -7,21 +8,22 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 // @import '~bootstrap/dist/css/bootstrap.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
-
 // @import "scss/style";
-
-html, body { height: 100%;
-  overflow-x: hidden; }
-body { margin: 0 ; font-family: Roboto, "Helvetica Neue", sans-serif;
+html,
+body {
+    height: 100%;
+    overflow-x: hidden;
 }
 
-
+body {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 ::-webkit-scrollbar {
     width: 8px;
-  }
+}
 
-  ::-webkit-scrollbar-track {
+ ::-webkit-scrollbar-track {
     // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     // -webkit-border-radius: 10px;
@@ -30,16 +32,16 @@ body { margin: 0 ; font-family: Roboto, "Helvetica Neue", sans-serif;
     box-shadow: none;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-  }
+}
 
-  ::-webkit-scrollbar-thumb {
+ ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
     background: #64b5f6;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-  }
+}
 
-  ::-webkit-scrollbar-thumb:window-inactive {
+ ::-webkit-scrollbar-thumb:window-inactive {
     background-color: #64b5f6;
-  }
+}
