--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
+<div *ngIf="ShowLoadingIndicator" class="loading-content" class="loader">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
