header and add some pages

--- a/src/app/modules/guide/pages/guide-home/guide-home.component.scss
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.scss
@@ -5,6 +5,7 @@
     // left: 0;
     // top: 45px;
     // padding-top: 20px;
+    // position: sticky;
     background-color: #b7e8eb !important;
     margin: 0;
     height: 100%;
