--- a/src/app/modules/home/top-cities/top-cities.component.html
+++ b/src/app/modules/home/top-cities/top-cities.component.html
@@ -26,7 +26,7 @@
   </ng-template>
 </owl-carousel-o> -->
 
-<div class="row mx-5 my-4">
+<div class=" large-screen row mx-5 my-4">
     <div class=" col-md-3">
         <div class="trending px-2">
             <div>TRENDING</div>
@@ -96,4 +96,74 @@
             </div>
         </div>
     </div>
+</div>
+<!-- /// -->
+
+<div class=" small-screen mx-5 my-4">
+      <div class="trending px-2">
+          <div>TRENDING</div>
+          <div>DESTINATIONS</div>
+      </div>
+
+      <div class="row">
+
+
+          <div class="col-md-4 m-3">
+              <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+                  <mdb-card-body class="waves-effect waves-light">
+                      <div class="white-text">
+                          <mdb-card-title>
+                              <h4>Jaipur, Rajasthan</h4>
+                          </mdb-card-title>
+                          <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
+                              <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                          </mdb-card-text>
+                          <div class="text-center">
+                              <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
+                              <a class="card-link p-2" style="border:1px solid white; ">View More</a>
+                          </div>
+                      </div>
+
+                  </mdb-card-body>
+              </mdb-card>
+          </div>
+          <div class="col-md-4 m-3">
+              <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+                  <mdb-card-body class="waves-effect waves-light">
+                      <div class="white-text">
+                          <mdb-card-title>
+                              <h4>Jaipur, Rajasthan</h4>
+                          </mdb-card-title>
+                          <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
+                              <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                          </mdb-card-text>
+                          <div class="text-center">
+                              <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
+                              <a class="card-link p-2" style="border:1px solid white; ">View More</a>
+                          </div>
+                      </div>
+
+                  </mdb-card-body>
+              </mdb-card>
+          </div>
+          <div class="col-md-4 m-3">
+              <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+                  <mdb-card-body class="waves-effect waves-light">
+                      <div class="white-text">
+                          <mdb-card-title>
+                              <h4>Jaipur, Rajasthan</h4>
+                          </mdb-card-title>
+                          <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
+                              <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                          </mdb-card-text>
+                          <div class="text-center">
+                              <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
+                              <a class="card-link p-2" style="border:1px solid white; ">View More</a>
+                          </div>
+                      </div>
+
+                  </mdb-card-body>
+              </mdb-card>
+          </div>
+      </div>
 </div>
