--- a/src/app/modules/guide/components/profile/profile.component.html
+++ b/src/app/modules/guide/components/profile/profile.component.html
@@ -208,7 +208,7 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="form6">Gender</label>
+                                <label for="myform">Gender</label>
                                 <select class="form-control browser-default custom-select" formControlName="gender">
                 <option value="Mr">Mr</option>
                 <option value="Mrs">Mrs</option>
@@ -218,8 +218,8 @@
                         </div>
                         <div class="col-md-9">
                             <div class="form-group">
-                                <label for="form6">Name</label>
-                                <input type="text" id="form6" class="form-control" formControlName="name">
+                                <label for="form1">Name</label>
+                                <input type="text" id="form1" class="form-control" formControlName="name">
 
                             </div>
                         </div>
@@ -228,8 +228,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group form-sm">
-                                <label for="form11">Email</label>
-                                <input type="email" id="form11" class="form-control" formControlName="email" disabled>
+                                <label for="form2">Email</label>
+                                <input type="email" id="form2" class="form-control" formControlName="email" disabled>
 
                             </div>
                         </div>
@@ -239,15 +239,15 @@
 
                         <div class="col-md-5">
                             <div class="form-group">
-                                <label for="form6">Date Of Birth</label>
-                                <input type="date" id="form6" disabled formControlName="dob" class="form-control">
+                                <label for="form3">Date Of Birth</label>
+                                <input type="date" id="form3" disabled formControlName="dob" class="form-control">
 
                             </div>
                         </div>
                         <div class="col-md-7">
                             <div class="form-group form-sm">
-                                <label for="form11">Aadhar Number</label>
-                                <input type="text" id="form11" class="form-control" formControlName="aadhaarNumber" disabled>
+                                <label for="form4">Aadhar Number</label>
+                                <input type="text" id="form4" class="form-control" formControlName="aadhaarNumber" disabled>
 
                             </div>
                         </div>
@@ -256,8 +256,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="form6">Phone Number</label>
-                                <input type="tel" id="form6" formControlName="phoneNumber" class="form-control">
+                                <label for="form5">Phone Number</label>
+                                <input type="tel" id="form5" formControlName="phoneNumber" class="form-control">
 
                             </div>
                         </div>
@@ -266,8 +266,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="form58">State</label>
-                                <input type="text" id="form58" formControlName="state" class="form-control">
+                                <label for="form6">State</label>
+                                <input type="text" id="form6" formControlName="state" class="form-control">
                                 <!-- <select class="form-control" id="form58" formControlName="state" class="browser-default custom-select" #state
                   (change)="getAllCity(state.value)">
                   <option value="" disabled>Select State</option>
@@ -277,8 +277,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="form58">City</label>
-                                <input type="text" id="form58" formControlName="city" class="form-control">
+                                <label for="form7">City</label>
+                                <input type="text" id="form7" formControlName="city" class="form-control">
                                 <!-- <select formControlName="city" class="form-control" class="browser-default custom-select" id="form58">
                   <option value="" disabled>Select City</option>
                   <option *ngFor="let item of cityList" [value]="item.name"> {{ item?.name }}</option>
@@ -289,8 +289,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="form58">Address</label>
-                                <textarea id="form58" formControlName="address" class="form-control">
+                                <label for="form8">Address</label>
+                                <textarea id="form8" formControlName="address" class="form-control">
                 </textarea>
                             </div>
                         </div>
@@ -321,8 +321,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="form1" class="">People Limit</label>
-                                <input type="number" id="form1" formControlName="peopleLimit" class="form-control">
+                                <label for="form9" class="">People Limit</label>
+                                <input type="number" id="form9" formControlName="peopleLimit" class="form-control">
                             </div>
                         </div>
                     </div>
@@ -336,8 +336,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="form1" class="">Charges Per Day</label>
-                                <input type="number" id="form1" formControlName="perDayCharge" class="form-control">
+                                <label for="form2" class="">Charges Per Day</label>
+                                <input type="number" id="form2" formControlName="perDayCharge" class="form-control">
 
                             </div>
                         </div>
@@ -374,8 +374,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="form1" class="">Work-Profile</label>
-                                <input type="text" id="form1" formControlName="profile" class="form-control">
+                                <label for="form2" class="">Work-Profile</label>
+                                <input type="text" id="form2" formControlName="profile" class="form-control">
 
                             </div>
                         </div>
@@ -383,15 +383,15 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="form1" class="">Starting Date</label>
-                                <input type="number" id="form1" formControlName="startYear" class="form-control">
+                                <label for="form3" class="">Starting Date</label>
+                                <input type="number" id="form3" formControlName="startYear" class="form-control">
 
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="form1" class="">Duration</label>
-                                <input type="text" id="form1" formControlName="duration" class="form-control">
+                                <label for="form4" class="">Duration</label>
+                                <input type="text" id="form4" formControlName="duration" class="form-control">
 
                             </div>
                         </div>
