--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -134,13 +134,13 @@
                         <button type="submit" class="button submit mx-auto" (click)="login('tourist')">login</button>
                     </div>
                 </form><br>
-                <div class="text-center white-text"><a [routerLink]="['/tourists/register']" >Wanna explore? Register now</a></div>
+                <div class="text-center white-text"><a [routerLink]="['/tourists/register']">Wanna explore? Register now</a></div>
             </div>
         </div>
         <div class="leftbox">
             <h2 class="title"><span>VOILA</span>&<br>Tourist</h2>
             <p class="desc">pick your perfect <span>bouquet</span></p>
-            <img class="flower smaller" src="https://image.ibb.co/d5X6pn/1357d638624297b.jpg" alt="1357d638624297b" border="0">
+            <img class="flower smaller" src="assets\images\ouch-guide-login.png" alt="guide-login" border="0">
             <p class="account">Are you a traveller</p>
             <button [routerLink]="['/login/tourist']" class="button" id="signin">Log in</button>
         </div>
