login page done

--- a/src/app/modules/guide/components/deals/deals.component.html
+++ b/src/app/modules/guide/components/deals/deals.component.html
@@ -95,7 +95,7 @@
                         </div>
                     </div>
 
-                    <div class="row card-body pb-0" formArrayName="places">
+                    <!-- <div class="row card-body pb-0" formArrayName="places">
                         <div class="col-md-7">
                             <label for="form6"><mdb-icon fas icon="map-marker-alt" class="prefix"></mdb-icon> Locations</label>
                             <div class="row" *ngFor="let places of dealForm.get('places').controls; let i= index">
@@ -117,11 +117,11 @@
                           <mdb-icon fas icon="map-marker-alt" class="prefix"></mdb-icon> Add More
                         </button>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- <div class="row pr-3 pb-3">
                         <div class="col-md-12">
-                            
+
                         </div>
                     </div> -->
                 </form>
@@ -152,7 +152,7 @@
             <div class="col">
 
                 <div class="form-group">
-                   
+
                     <label for="form0"><mdb-icon fas icon="city" class="prefix"></mdb-icon> State</label><br>
                     <select class="form-control" id="form0" formControlName="state" class="browser-default custom-select" #state (change)="getAllCity(state.value)">
           <option value="" disabled>Select State</option>
@@ -176,10 +176,10 @@
 
             <div class="col">
                 <div class="form-group">
-                   
+
                     <label for="form2"><mdb-icon fas icon="dollar-sign" class="prefix"></mdb-icon> Price</label>
                     <input formControlName="price" type="number" placeholder="price " id="form2" class="form-control">
-           
+
                 </div>
 
             </div>
@@ -187,7 +187,7 @@
 
         <div class="row card-body pb-0">
             <div class="col">
-           
+
                 <div class="form-group">
                     <label for="form3"><mdb-icon fas icon="calendar-alt" class="prefix"></mdb-icon> From</label>
                     <input formControlName="startDate" type="date" id="form3" class="form-control">
@@ -199,7 +199,7 @@
                     <label for="form4"><mdb-icon fas icon="calendar-alt" class="prefix"></mdb-icon> To</label>
                     <input formControlName="endDate" type="date" id="form4" class="form-control">
                 </div>
-    
+
 
 
             </div>
