--- a/src/app/modules/home/top-cities/top-cities.component.html
+++ b/src/app/modules/home/top-cities/top-cities.component.html
@@ -101,7 +101,7 @@
 
 <div class=" small-screen mx-5 my-4">
       <div class="trending px-2">
-          <div>TRENDING</div>
+          <div>TRENDINGs</div>
           <div>DESTINATIONS</div>
       </div>
 
