--- a/src/app/modules/home/top-deals/top-deals.component.scss
+++ b/src/app/modules/home/top-deals/top-deals.component.scss
@@ -7,6 +7,9 @@
 .all{
   background-color: rgb(56,50,48) !important;
 }
+.large-screen{
+  height: 390px !important;
+}
 .deal-card {
     width: 460px;
     height: 200px;
