--- a/src/app/modules/home/filter-form/filter-form.component.html
+++ b/src/app/modules/home/filter-form/filter-form.component.html
@@ -8,11 +8,12 @@
   <mdb-carousel-item>
     <div class="view w-100">
       <img class="d-block w-100" src="http://placeimg.com/1000/440/nature" alt="First slide">
-      <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
+      <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
       <!-- testing text -->
-      <div class="content">
+      <h3 class="h3-responsive small-screen">Voila</h3>
+      <div class="content large-screen">
         <div class="content__container">
           <p class="content__container__text">
             Voila
@@ -33,10 +34,11 @@
   <mdb-carousel-item>
     <div class="view w-100">
       <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
-      <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
+      <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
-      <div class="content">
+      <h3 class="h3-responsive small-screen">Voila</h3>
+      <div class="content large-screen">
         <div class="content__container">
           <p class="content__container__text">
             Voila
@@ -56,10 +58,11 @@
   <mdb-carousel-item>
     <div class="view w-100">
       <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
-      <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
+      <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
-      <div class="content">
+      <h3 class="h3-responsive small-screen">Voila</h3>
+      <div class="content large-screen">
         <div class="content__container">
           <p class="content__container__text">
             Voila
@@ -141,8 +144,7 @@
         </div>
       </div>
     </div>
-
-  </div>
+</div>
 
     <div class="col-md-2">
   <div class="form-group">
