--- a/src/app/modules/home/map/map.component.html
+++ b/src/app/modules/home/map/map.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-   <div class="col-md-8 no-margin">
+<div class="row map">
+   <div class="col-md-8 no-margin img-fluid">
       <br>
       <br>
       <div class="map-main">
